Update Cairo to VS 2010. Fix a bug when using Cairo as the system shell where windows would not properly maximize back into the size they were previously.

--- a/code/Cairo Desktop/Cairo Explorer/CairoExplorerWindow.xaml
+++ b/code/Cairo Desktop/Cairo Explorer/CairoExplorerWindow.xaml
@@ -753,11 +753,11 @@
             <Separator Width="15"
                 Background="{x:Null}" />
             <Button Style="{StaticResource CairoExplorerToolbarButtonSplitFirst}"
-                ToolTip="Back">
+                ToolTip="Back" Click="Button_Click">
                 <Button.Content>
                     <Image Source="Resources\backGlyph.png"
                         Width="9"
-                        Height="14" />
+                        Height="14" ImageFailed="Image_ImageFailed" />
                 </Button.Content>
             </Button>
             <Button Style="{StaticResource CairoExplorerToolbarButtonSplitLast}"
