--- a/code/Cairo Desktop/Cairo Desktop/DesktopIcons.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/DesktopIcons.xaml
@@ -2,7 +2,7 @@
 <UserControl x:Class="CairoDesktop.DesktopIcons"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    x:Name="CairoDesktopIcons">
+    x:Name="CairoDesktopIcons" Height="300" Width="300">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
