--- a/code/Cairo Desktop/Cairo Desktop/MenuBar.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/MenuBar.xaml
@@ -11,7 +11,7 @@
     BorderThickness="0,0,0,1"
     Left="0"
     Margin="0,0,0,0"
-    Topmost="False"
+    Topmost="True"
     ResizeMode="NoResize"
     ShowInTaskbar="False"
     Visibility="Hidden"
