--- a/code/Cairo Desktop/Cairo Desktop/TaskListButton.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/TaskListButton.xaml
@@ -23,6 +23,7 @@
                 <ContextMenu Style="{StaticResource CairoContextMenuStyle}">
                     <MenuItem Header="Minimize" Style="{StaticResource CairoMenuItemStyle}" Click="Min_Click" Name="MinItem" />
                     <MenuItem Header="Restore" Style="{StaticResource CairoMenuItemStyle}" Click="Max_Click" Name="MaxItem" />
+                    <MenuItem Header="Add To TaskBar" Style="{StaticResource CairoMenuItemStyle}" Click="Add_To_Task_Click" Name="AddToTaskBar" />
                     <Separator Style="{StaticResource CairoMenuSeparatorStyle}" />
                     <MenuItem Header="Close" Style="{StaticResource CairoMenuItemStyle}" Click="Close_Click" />
                 </ContextMenu>
