Do some hacking to get the menu bar and task bar together on top of all other apps (kinda hackish, had to make another shell message handler which knew of both pointers and then force them on top whenever another application attempts to take over the screen). Only drawback is that now the top bar is covered always, all the apps will need positioned correctly now. More stabs at blocking blank windows from attaching to the task bar.

--- a/code/Cairo Desktop/Cairo Desktop/Desktop.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/Desktop.xaml
@@ -6,11 +6,11 @@
     Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}"
     ResizeMode="NoResize"
     ShowInTaskbar="False"
-    Top="35"
+    Top="0"
     Left="0"
     AllowsTransparency="True"
     Focusable="False"
-    Background="{x:Null}" Topmost="False" Activated="Window_Activated">
+    Background="Aqua" Topmost="False" Activated="Window_Activated">
     <Window.Resources>
         <Style x:Key="CairoDesktopNavItemStyle"
             TargetType="{x:Type Button}">
