--- a/code/Cairo Desktop/Cairo Desktop/Taskbar.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/Taskbar.xaml
@@ -14,7 +14,7 @@
     SizeToContent="Width"
     Focusable="False"
     Background="{x:Null}"
-    Topmost="True">
+    Topmost="True" Loaded="Window_Loaded">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
