Add a rename method to the menu items and extend the CairoMessage class so that it can now ask the user for info as well.

--- a/code/Cairo Desktop/Cairo Desktop/CairoMessage.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/CairoMessage.xaml
@@ -111,5 +111,6 @@
                 Style="{StaticResource CairoButtonStyle}"
                 Visibility="{Binding ElementName=messageWindow, Path=Buttons, Converter={StaticResource MessageBoxButtonConverter}, ConverterParameter=Cancel}" />
         </StackPanel>
+        <TextBox Grid.Column="2" Grid.Row="3" Height="23" HorizontalAlignment="Left" Margin="0,60,0,0" Name="userTextField" VerticalAlignment="Top" Width="397" Visibility="Hidden" Grid.ColumnSpan="3" />
     </Grid>
 </Window>
