--- a/code/Cairo Desktop/Cairo Desktop/Taskbar.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/Taskbar.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="CairoDesktop.Taskbar" xmlns:tasks="clr-namespace:CairoDesktop.WindowsTasks;assembly=CairoDesktop.WindowsTasks" xmlns:self="clr-namespace:CairoDesktop"
+<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="CairoDesktop.Taskbar" xmlns:self="clr-namespace:CairoDesktop"
     x:Name="Window"
     Title=""
     Height="29"
@@ -20,11 +20,55 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Cairo.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <tasks:WindowsTasksService x:Key="tasksSvc" x:Name="tasksSvc" />
+            <self:WindowsTasksService x:Key="tasksSvc" x:Name="tasksSvc" />
             <self:BoolTovisibilityConverter x:Key="BoolVisConverter" />
             <SolidColorBrush x:Key="ListBorder"
                 Color="#828790" />
             <Style x:Key="ListViewStyle1"
+                TargetType="{x:Type ListView}">
+                <Setter Property="Background"
+                    Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
+                <Setter Property="BorderBrush"
+                    Value="{StaticResource ListBorder}" />
+                <Setter Property="BorderThickness"
+                    Value="1" />
+                <Setter Property="Foreground"
+                    Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+                <Setter Property="ScrollViewer.HorizontalScrollBarVisibility"
+                    Value="Auto" />
+                <Setter Property="ScrollViewer.VerticalScrollBarVisibility"
+                    Value="Auto" />
+                <Setter Property="ScrollViewer.CanContentScroll"
+                    Value="true" />
+                <Setter Property="VerticalContentAlignment"
+                    Value="Center" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type ListView}">
+                            <Border SnapsToDevicePixels="true"
+                                x:Name="Bd"
+                                Background="{TemplateBinding Background}">
+                                <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                    MinHeight="29" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsEnabled"
+                                    Value="false">
+                                    <Setter Property="Background"
+                                        TargetName="Bd"
+                                        Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" />
+                                </Trigger>
+                                <Trigger Property="IsGrouping"
+                                    Value="true">
+                                    <Setter Property="ScrollViewer.CanContentScroll"
+                                        Value="true" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="ListViewStyle2"
                 TargetType="{x:Type ListView}">
                 <Setter Property="Background"
                     Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
@@ -133,7 +177,8 @@
                     BorderBrush="#FF908382"
                     Style="{DynamicResource ListViewStyle1}"
                     BorderThickness="0,0,0,0"
-                    VerticalAlignment="Stretch" x:Name="TasksList">
+                    VerticalAlignment="Stretch"
+                    x:Name="TasksList">
                     <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"
