--- a/code/Cairo Desktop/Cairo Desktop/TaskButton.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/TaskButton.xaml
@@ -2,10 +2,9 @@
 <UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
     x:Class="CairoDesktop.TaskButton"
     x:Name="UserControl"
-    d:DesignWidth="140"
-    d:DesignHeight="29" xmlns:self="clr-namespace:CairoDesktop">
+    Width="42"
+    Height="42" xmlns:self="clr-namespace:CairoDesktop">
     <UserControl.Resources>
-        
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Cairo.xaml" />
@@ -18,7 +17,7 @@
         <Button x:Name="btn"
             BorderThickness="0"
             VerticalAlignment="Stretch"
-            Click="btnClick" MouseDoubleClick="btn_MouseDoubleClick">
+            Click="btnClick" MouseDoubleClick="btn_MouseDoubleClick" PreviewMouseLeftButtonDown="btn_MouseDown_1" Width="Auto" Height="Auto">
             <Button.Style>
                 <MultiBinding Converter="{StaticResource styleConverter}">
                     <Binding RelativeSource="{RelativeSource Self}" />
@@ -37,22 +36,17 @@
                 </ContextMenu>
             </Button.ContextMenu>
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="21" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
                 <Image Source="{Binding Path=Icon, Converter={StaticResource iconConverter}}"
-                    Width="16"
-                    Height="16"
-                    Grid.Column="0" Margin="0,0,5,0"/>
+                    Width="32"
+                    Height="32"/>
                 <!-- text block requires width to center text;
                     should implement a dynamic width variable for when the buttons 
                     resize when the taskbar is filled -->
-                <TextBlock Padding="0,0,5,0"
+                <!--<TextBlock Padding="0,0,5,0"
                            Width="95" Name="WinTitle"
                     Text="{Binding Path=Title}"
                     TextTrimming="CharacterEllipsis"
-                    Grid.Column="1" TextAlignment="Center"/>
+                    Grid.Column="1" TextAlignment="Center"/>-->
             </Grid>
         </Button>
     </Grid>
