--- a/code/Cairo Desktop/Cairo Desktop/TaskListButton.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/TaskListButton.xaml
@@ -24,7 +24,6 @@
                     <MenuItem Header="Minimize" Style="{StaticResource CairoMenuItemStyle}" Click="Min_Click" Name="MinItem" />
                     <MenuItem Header="Restore" Style="{StaticResource CairoMenuItemStyle}" Click="Max_Click" Name="MaxItem" />
                     <MenuItem Header="Add To Menu" Style="{StaticResource CairoMenuItemStyle}" Click="Add_To_Menu_Click" Name="AddToTaskBar" />
-                    <MenuItem Header="Hide" Style="{StaticResource CairoMenuItemStyle}" Click="Hide_Click" Name="Hide" />
                     <Separator Style="{StaticResource CairoMenuSeparatorStyle}" />
                     <MenuItem Header="Force Quit" Style="{StaticResource CairoMenuItemStyle}" Click="Force_Close_Click" />
                     <MenuItem Header="Close" Style="{StaticResource CairoMenuItemStyle}" Click="Close_Click" />
@@ -35,7 +34,7 @@
                     <ColumnDefinition Width="21" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Image Source="{Binding Path=Icon, Converter={StaticResource iconConverter}}"
+                <Image Source="{Binding Path=Image, Converter={StaticResource iconConverter}}"
                     Width="16"
                     Height="16"
                     Grid.Column="0" Margin="0,0,5,0"/>
