Update to .net 4.5 and move all build relics to the Build/ folder.

--- a/code/Cairo Desktop/Cairo Desktop/MenuBar.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/MenuBar.xaml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:CairoDesktop.Properties" xmlns:control="clr-namespace:CairoDesktop" xmlns:search="clr-namespace:VistaSearchProvider" xmlns:c="http://schemas.microsoft.com/wpf/2008/toolkit" x:Class="CairoDesktop.MenuBar"
+<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:CairoDesktop.Properties"
+        xmlns:control="clr-namespace:CairoDesktop"
+        xmlns:search="clr-namespace:VistaSearchProvider" 
+        xmlns:c="http://schemas.microsoft.com/wpf/2008/toolkit"
+        x:Class="CairoDesktop.MenuBar"
     x:Name="Window"
     Title=""
     WindowStyle="None"
