--- a/code/Cairo Desktop/Cairo Desktop/MenuBar.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/MenuBar.xaml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:CairoDesktop.Properties"
         xmlns:control="clr-namespace:CairoDesktop"
         xmlns:search="clr-namespace:VistaSearchProvider" 
         xmlns:c="http://schemas.microsoft.com/wpf/2008/toolkit"
@@ -11,7 +10,7 @@
     WindowStyle="None"
     AllowsTransparency="True"
     Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}"
-    Height="48"
+    Height="44"
     Top="0"
     BorderBrush="#AF707070"
     BorderThickness="0,0,0,1"
@@ -27,7 +26,7 @@
     Initialized="OnWindowInitialized"
     Closing="OnWindowClosing"
     SizeChanged="OnWindowResize"
-    MaxHeight="48">
+    MaxHeight="44">
     <Window.Background>
         <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
             <GradientStop Color="#8F4a4a4a" Offset="1.0" />
@@ -40,7 +39,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Cairo.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <local:Settings x:Key="settings" />
             <control:BoolTovisibilityConverter x:Key="BoolVisConverter" />
             <Style x:Key="InnerProgramsListStyle"
                 TargetType="ItemsControl">
@@ -72,11 +70,11 @@
             </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
-    <DockPanel DataContext="{DynamicResource settings}"
-        x:Name="CairoMenuBarContainer" Style="{DynamicResource DockPanelStyle}">
+    <DockPanel
+        x:Name="CairoMenuBarContainer" Background="{StaticResource CairoBackgroundColor}">
         <StackPanel Orientation="Horizontal"
             VerticalAlignment="Top"
-            Height="24"
+            Height="44"
             Width="Auto"
             x:Name="CairoMenuBar">
             <Menu Style="{DynamicResource CairoMenuBarMainContainerStyle}">
@@ -98,9 +96,6 @@
                         Style="{DynamicResource CairoMenuItemStyle}"
                         Click="InitAppGrabberWindow" />
                     <Separator Style="{DynamicResource CairoMenuSeparatorStyle}" />
-                    <MenuItem Header="Cairo Settings"
-                        Style="{DynamicResource CairoMenuItemStyle}"
-                        Click="InitCairoSettingsWindow" />
                     <MenuItem Header="Windows Control Panel"
                         Style="{DynamicResource CairoMenuItemStyle}"
                         Click="OpenControlPanel" />
@@ -207,33 +202,40 @@
             </Menu>
         </StackPanel>
         <ListView HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
+                  Height="44"
+                  Background="Transparent"
+                  ScrollViewer.CanContentScroll="False"
+                  BorderThickness="0"
                     x:Name="TasksList">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal"
-                                Margin="0"></StackPanel>
+                                Margin="3,0,0,0"></StackPanel>
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <control:TaskButton Visibility="{Binding Path=ShowInTaskbar, Converter={StaticResource BoolVisConverter}}" />
+                    <control:TaskButton Height="38" Width="44" Visibility="{Binding Path=ShowInTaskbar, Converter={StaticResource BoolVisConverter}}" ToolTip="{Binding Path=Title}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
         <StackPanel Orientation="Horizontal"
             DockPanel.Dock="Right"
             VerticalAlignment="Top"
-            Height="24"
+            Height="44"
             HorizontalAlignment="Right"
             x:Name="CairoMenuBarRight"
             Margin="0,0,0,0">
             <control:SystemTray x:Name="SysTray" />
-            <Menu Style="{DynamicResource CairoMenuBarMainContainerStyle}">
+            <Menu Style="{DynamicResource CairoMenuBarMainContainerStyle}" Margin="10,0,0,0" Height="44">
                 <MenuItem Style="{DynamicResource CairoMenuItemThinStyle}"
-                          ItemContainerStyle="{DynamicResource CairoMenuItemContainerStyle}">
+                          ItemContainerStyle="{DynamicResource CairoMenuItemContainerStyle}" Height="44">
                     <MenuItem.Header>
-                        <TextBlock Name="dateText" />
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom">
+                            <TextBlock Margin="0,0,0,12.75" VerticalAlignment="Bottom" FontSize="14" Name="monthText"/>
+                            <TextBlock Margin="0,0,0,11" VerticalAlignment="Bottom" FontSize="20" Name="dayText" />
+                            <TextBlock Margin="0,0,0,11" VerticalAlignment="Bottom" FontSize="20" Name="timeText"/>
+                        </StackPanel>
                     </MenuItem.Header>
                     <StackPanel>
                         <c:Calendar Name="monthCalendar"
