--- a/code/Cairo Desktop/Cairo Desktop/TaskButton.xaml
+++ b/code/Cairo Desktop/Cairo Desktop/TaskButton.xaml
@@ -2,8 +2,9 @@
 <UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
     x:Class="CairoDesktop.TaskButton"
     x:Name="UserControl"
-    Width="42"
-    Height="42" xmlns:self="clr-namespace:CairoDesktop">
+    HorizontalAlignment="Stretch"
+    VerticalAlignment="Stretch"
+    xmlns:self="clr-namespace:CairoDesktop">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,43 +12,59 @@
             </ResourceDictionary.MergedDictionaries>
             <self:IconConverter x:Key="iconConverter" />
             <self:TaskbuttonStyleConverter x:Key="styleConverter" />
+            <Style x:Key="TaskBarButton" TargetType="Button">
+                <Setter Property="OverridesDefaultStyle" Value="True"/>
+                <Setter Property="Margin" Value="0"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border Name="border" 
+                            BorderThickness="1"
+                            Padding="0" 
+                            BorderBrush="DarkGray" 
+                            CornerRadius="1" 
+                            Background="{TemplateBinding Background}">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="border" Property="BorderBrush" Value="Black" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid x:Name="LayoutRoot">
-        <Button x:Name="btn"
-            BorderThickness="0"
-            VerticalAlignment="Stretch"
-            Click="btnClick" MouseDoubleClick="btn_MouseDoubleClick" PreviewMouseLeftButtonDown="btn_MouseDown_1" Width="Auto" Height="Auto">
-            <Button.Style>
-                <MultiBinding Converter="{StaticResource styleConverter}">
-                    <Binding RelativeSource="{RelativeSource Self}" />
-                    <Binding Path="State" />
-                </MultiBinding>
-            </Button.Style>
-            <Button.ContextMenu>
-                <ContextMenu Style="{StaticResource CairoContextMenuStyle}">
-                    <MenuItem Header="Minimize" Style="{StaticResource CairoMenuItemStyle}" Click="Min_Click" Name="MinItem" />
-                    <MenuItem Header="Restore" Style="{StaticResource CairoMenuItemStyle}" Click="Max_Click" Name="MaxItem" />
-                    <MenuItem Header="Add To Menu" Style="{StaticResource CairoMenuItemStyle}" Click="Add_To_Menu_Click" Name="AddToTaskItem" />
-                    <MenuItem Header="Hide" Style="{StaticResource CairoMenuItemStyle}" Click="Hide_Click" Name="Hide" />
-                    <Separator Style="{StaticResource CairoMenuSeparatorStyle}" />
-                    <MenuItem Header="Force Quit" Style="{StaticResource CairoMenuItemStyle}" Click="Force_Close_Click" />
-                    <MenuItem Header="Close" Style="{StaticResource CairoMenuItemStyle}" Click="Close_Click" />
-                </ContextMenu>
-            </Button.ContextMenu>
-            <Grid>
-                <Image Source="{Binding Path=Icon, Converter={StaticResource iconConverter}}"
-                    Width="32"
-                    Height="32"/>
-                <!-- text block requires width to center text;
-                    should implement a dynamic width variable for when the buttons 
-                    resize when the taskbar is filled -->
-                <!--<TextBlock Padding="0,0,5,0"
-                           Width="95" Name="WinTitle"
-                    Text="{Binding Path=Title}"
-                    TextTrimming="CharacterEllipsis"
-                    Grid.Column="1" TextAlignment="Center"/>-->
-            </Grid>
-        </Button>
-    </Grid>
+    <Button x:Name="btn"
+        BorderThickness="0"
+        Background="#33FFFFFF"
+        HorizontalAlignment="Stretch"
+        VerticalAlignment="Stretch"
+        Click="btnClick" MouseDoubleClick="btn_MouseDoubleClick" Padding="0" Margin="0">
+        <Button.ContextMenu>
+            <ContextMenu Style="{StaticResource CairoContextMenuStyle}">
+                <MenuItem Foreground="Black" Header="Open New" Style="{StaticResource CairoMenuItemStyle}" Click="OpenNewInstance_Click_1" Name="OpenNewInstance" />
+                <MenuItem Foreground="Black" Header="Add to Taskbar" Style="{StaticResource CairoMenuItemStyle}" Click="Add_To_Menu_Click" Name="AddToTaskBar" />
+                <MenuItem Foreground="Black" Header="Remove from Taskbar" Style="{StaticResource CairoMenuItemStyle}" Click="Remove_From_Menu_Click" Name="RemoveFromTaskBar" />
+                <Separator Style="{StaticResource CairoMenuSeparatorStyle}" />
+                <MenuItem Foreground="Black" Header="Force Quit" Style="{StaticResource CairoMenuItemStyle}" Click="Force_Close_Click" />
+                <MenuItem Foreground="Black" Header="Close" Style="{StaticResource CairoMenuItemStyle}" Click="Close_Click" />
+            </ContextMenu>
+        </Button.ContextMenu>
+        <Grid>
+            <Image Source="{Binding Path=Icon, Converter={StaticResource iconConverter}}"
+                Width="32"
+                Height="32"/>
+            <!-- text block requires width to center text;
+                should implement a dynamic width variable for when the buttons 
+                resize when the taskbar is filled -->
+            <!--<TextBlock Padding="0,0,5,0"
+                        Width="95" Name="WinTitle"
+                Text="{Binding Path=Title}"
+                TextTrimming="CharacterEllipsis"
+                Grid.Column="1" TextAlignment="Center"/>-->
+        </Grid>
+    </Button>
 </UserControl>
